--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
 }
 
+
 header{
     width: 85%;
     margin: auto;
@@ -51,12 +52,39 @@ content{
     padding: 10px;
     margin-bottom: 100px;
     border-radius: 13px;
+    justify-content: space-between;
+
+}
+
+.college{
+    display: block;
+    width: 90%;
+    height: 20%;
+    margin: auto;
+    box-shadow: 5px 5px 25px rgb(165, 159, 159);
+    padding: 10px;
+    margin-bottom: 100px;
+    border-radius: 13px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.select-container{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 20px auto 20px auto;
+    align-items: center;
+}
+.select-container select {
+    margin-bottom: 20px; /* Add space below each dropdown */
 }
 
 content .content-right, .content-left{
     width: 49%;
     margin: auto;
     align-items: center;
+    
 }
 
 content img{
@@ -87,6 +115,30 @@ content .content-right:hover, .content-left:hover{
 
 }
 
+.upper{
+    display: flex;
+    /* width: 90%;
+    height: 20%;
+    margin: auto;
+    box-shadow: 5px 5px 25px rgb(165, 159, 159);
+    padding: 10px;
+    margin-bottom: 100px;
+    border-radius: 13px; */
+    justify-content: space-between;
+}
+
+.down{
+    display: flex;
+    /* width: 90%;
+    height: 20%;
+    margin: auto;
+    box-shadow: 5px 5px 25px rgb(165, 159, 159);
+    padding: 10px;
+    margin-bottom: 100px;
+    border-radius: 13px; */
+    justify-content: space-between; 
+}
+
 footer p{
     margin: auto;
     align-items: center;
@@ -94,6 +146,24 @@ footer p{
     margin-bottom: 20px;
     color: gray;
 }
+select {
+    font-size: 16px;
+    line-height: 28px;
+    padding: 8px 16px;
+    margin: auto;
+    width: 30%;
+    min-height: 44px;
+    border: unset;
+    border-radius: 4px;
+    outline-color: rgb(84 105 212 / 0.5);
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
+                rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
+                rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
+                rgba(60, 66, 87, 0.16) 0px 0px 0px 1px, 
+                rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
+                rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
+                rgba(0, 0, 0, 0) 0px 0px 0px 0px;}
 
 @media screen and (max-width: 586px) {
     header{
@@ -107,4 +177,16 @@ footer p{
     content img{
         margin: 20px 0px 20px 0px;
     }
+    select {
+    width: 100%;
+    }
+    .select-container{
+    display: block;
+    }
+    ul{
+        display: none!important;
+    }
   }
+
+
+  
