--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,19 @@ header ul li {
     display: inline-flex;
     list-style: none;
     margin: 10px 15px;
+    font-size: 30px;
+    color: black;
+    font-weight: 500;
+    transition: all 0.3s ease;
 }
 
 header ul li a {
     text-decoration: none;
-    font-size: 24px;
+    font-size: 30px;
     color: black;
     font-weight: 500;
     transition: all 0.3s ease;
+
 }
 
 header ul li a:hover {
@@ -183,9 +188,19 @@ select {
     .select-container{
     display: block;
     }
-    ul{
-        display: none!important;
+    header img{
+        width: 25%;
+        display: flex;
     }
+    header ul li {
+    font-size: 15px;
+    }
+    /* header{
+    height: 100px;
+    } */
+    /* ul{
+        display: none!important;
+    } */
   }
 
 
