--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3261,6 +3261,22 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #0dcaf0;
   --bs-gradient: none;
 }
+.btn-outline-info-dark {
+  --bs-btn-color: #4fb3b4;
+  --bs-btn-border-color: #4fb3b4;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #4fb3b4;
+  --bs-btn-hover-border-color: #4fb3b4;
+  --bs-btn-focus-shadow-rgb: 13, 202, 240;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #4fb3b4;
+  --bs-btn-active-border-color: #4fb3b4;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #4fb3b4;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #4fb3b4;
+  --bs-gradient: none;
+}
 
 .btn-outline-warning {
   --bs-btn-color: #ffc107;
